[gd_scene load_steps=20 format=3 uid="uid://c5ymybfjm8kfm"]

[ext_resource type="Script" uid="uid://drujhi3kyvi2u" path="res://scripts/game_logic.gd" id="1_p0w5i"]
[ext_resource type="Script" uid="uid://cp1qex37r1rrc" path="res://scripts/ui.gd" id="2_kobp4"]
[ext_resource type="PackedScene" uid="uid://cgqr0bo81lrix" path="res://components/joystick/Joystick.tscn" id="3_w86v4"]
[ext_resource type="Theme" uid="uid://c6vho6rwvu82i" path="res://assets/font/my_theme.tres" id="4_l3qxk"]
[ext_resource type="Texture2D" uid="uid://e7ev8a2nskv2" path="res://assets/background_space_wide_screen.png" id="5_4bnm5"]
[ext_resource type="Material" uid="uid://5slcagwnqqij" path="res://shaders/Glowing.tres" id="6_jcauo"]
[ext_resource type="Texture2D" uid="uid://ce3i324ntjxh3" path="res://assets/star_2.png" id="7_fqsy6"]
[ext_resource type="AudioStream" uid="uid://cv1200f5e67ib" path="res://assets/sounds/explosion.wav" id="8_4ixbf"]
[ext_resource type="AudioStream" uid="uid://3i1neqbgutxm" path="res://assets/sounds/pickupCoin.wav" id="9_ltkbo"]
[ext_resource type="AudioStream" uid="uid://cejnvkaruohkw" path="res://assets/sounds/bonusPickUp.wav" id="10_l3qxk"]
[ext_resource type="Script" uid="uid://d0ms3k0nv2mp5" path="res://scripts/NetworkManager.gd" id="10_pjeai"]
[ext_resource type="PackedScene" uid="uid://r4el6umoyi8v" path="res://prefab/bullets.tscn" id="11_vhqmy"]
[ext_resource type="Texture2D" uid="uid://bkby2e0hkghxd" path="res://assets/placeholder.svg" id="12_w86v4"]
[ext_resource type="Texture2D" uid="uid://2vbmwrfbswhb" path="res://assets/bonus.png" id="14_l3qxk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w2sp8"]
radius = 40.9132

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wjhk"]
size = Vector2(1598, 159)

[sub_resource type="CircleShape2D" id="CircleShape2D_p0w5i"]
radius = 20.6155

[sub_resource type="CircleShape2D" id="CircleShape2D_4bnm5"]
radius = 13.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w86v4"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Shower" type="Node2D"]
script = ExtResource("1_p0w5i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_kobp4")

[node name="Joystick" parent="CanvasLayer" instance=ExtResource("3_w86v4")]

[node name="GameOverScreen" type="GridContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.224949, 0.224949)
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Control" type="Control" parent="CanvasLayer/GameOverScreen"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CanvasLayer/GameOverScreen/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.5
offset_top = -313.0
offset_right = 324.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("4_l3qxk")
theme_override_font_sizes/font_size = 256
text = "GAME OVER"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/GameOverScreen"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/GameOverScreen/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -494.0
offset_right = 494.0
offset_bottom = 321.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("4_l3qxk")
theme_override_font_sizes/font_size = 256
text = "Restart"

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -352.5
offset_right = 352.5
offset_bottom = 87.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("4_l3qxk")
text = "Level: 1 - Bullets: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NetworkLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -705.0
offset_bottom = 87.0
grow_horizontal = 0
size_flags_horizontal = 4
theme = ExtResource("4_l3qxk")
text = "Player connected: 0 "
horizontal_alignment = 2
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="CanvasLayer"]
offset_right = 705.0
offset_bottom = 87.0
rotation = -0.00440829
size_flags_horizontal = 4
theme = ExtResource("4_l3qxk")
text = " Bonus: 0 "
vertical_alignment = 1

[node name="TestRoomLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1132.0
offset_top = 201.0
offset_right = -427.0
offset_bottom = 288.0
grow_horizontal = 0
size_flags_horizontal = 4
theme = ExtResource("4_l3qxk")
text = "TEST ROOM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IsAGameRunningLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.5
offset_top = -43.5
offset_right = 352.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("4_l3qxk")
text = "A round is running, wait for the end to get started again ..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="IsServerLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -148.0
offset_right = 353.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("4_l3qxk")
text = "SERVER UI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space_background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(799.5, 450.5)
texture = ExtResource("5_4bnm5")

[node name="Star" type="Area2D" parent="." groups=["star"]]
position = Vector2(869, 637)
scale = Vector2(0.855469, 0.855469)

[node name="StarSprite" type="Sprite2D" parent="Star"]
material = ExtResource("6_jcauo")
scale = Vector2(0.13, 0.13)
texture = ExtResource("7_fqsy6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Star"]
shape = SubResource("CircleShape2D_w2sp8")

[node name="AudioManager" type="Node" parent="."]

[node name="ExplosionAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("8_4ixbf")

[node name="WinAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("9_ltkbo")

[node name="BonusPickUpAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("10_l3qxk")

[node name="Bullets" parent="." instance=ExtResource("11_vhqmy")]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="1" type="Node2D" parent="SpawnPoints"]
position = Vector2(848, 780)

[node name="2" type="Node2D" parent="SpawnPoints"]
position = Vector2(973, 779)

[node name="3" type="Node2D" parent="SpawnPoints"]
position = Vector2(553, 778)

[node name="4" type="Node2D" parent="SpawnPoints"]
position = Vector2(1178, 770)

[node name="5" type="Node2D" parent="SpawnPoints"]
position = Vector2(670, 781)

[node name="6" type="Node2D" parent="SpawnPoints"]
position = Vector2(1088, 772)

[node name="7" type="Node2D" parent="SpawnPoints"]
position = Vector2(655, 871)

[node name="8" type="Node2D" parent="SpawnPoints"]
position = Vector2(945, 875)

[node name="9" type="Node2D" parent="SpawnPoints"]
position = Vector2(568, 866)

[node name="10" type="Node2D" parent="SpawnPoints"]
position = Vector2(1181, 870)

[node name="11" type="Node2D" parent="SpawnPoints"]
position = Vector2(770, 874)

[node name="12" type="Node2D" parent="SpawnPoints"]
position = Vector2(1092, 881)

[node name="SafeZone" type="Node2D" parent="."]
position = Vector2(2, 680)

[node name="ColorRect" type="ColorRect" parent="SafeZone"]
offset_left = -9.0
offset_top = 57.0
offset_right = 1610.0
offset_bottom = 227.0
color = Color(0.2, 0.5, 1, 0.3)

[node name="AreaSafeZone" type="Area2D" parent="SafeZone" groups=["safeZone"]]
position = Vector2(3, -23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeZone/AreaSafeZone"]
position = Vector2(795, 162.5)
shape = SubResource("RectangleShape2D_3wjhk")

[node name="MyBullet" type="Node2D" parent="."]
position = Vector2(682, 694)

[node name="CharacterBody2D" type="CharacterBody2D" parent="MyBullet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MyBullet/CharacterBody2D"]
shape = SubResource("CircleShape2D_p0w5i")

[node name="Sprite2D" type="Sprite2D" parent="MyBullet"]
scale = Vector2(0.24, 0.24)
texture = ExtResource("12_w86v4")

[node name="Bonus" type="Area2D" parent="." groups=["bonus"]]
position = Vector2(1150, 663)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bonus"]
shape = SubResource("CircleShape2D_4bnm5")

[node name="BonusSprite" type="Sprite2D" parent="Bonus"]
material = ExtResource("6_jcauo")
scale = Vector2(0.2, 0.2)
texture = ExtResource("14_l3qxk")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Bonus"]
replication_config = SubResource("SceneReplicationConfig_w86v4")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("10_pjeai")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://6o6eiydhbvdn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/GameOverScreen/Control2/Button" to="." method="_on_button_restart_pressed"]
